Dosage 2.2 (released xx.xx.2013)

Features:
- comic: Added ARedTailsDream, Carciphona, Curtailed, GirlGenius,
  Lackadaisy, SabrinaOnline, TheDreamlandChronicles, TwoGuysAndGuy
  and Unsound. Patch by Dirk Reiners.
  Closes: GH bug #29

Changes:
- cmdline: Ignore trailing '/' at end of comic names. Useful
  when using shell completion to pick comics. Patch by Dirk Reiners.

Fixes:
- comics: Fix DorkTower, MadamAndEve and Saturday Morning Breakfast
  Cereal, and improve image filenames of CtrlAltDel. Patch by Dirk Reiners.


Dosage 2.1 (released 14.4.2013)

Features:
- comics: Add some comic descriptions from their webpages.

Fixes:
- cmdline: Fix output encoding errors on comic listing.
  Closes: GH bug #24


Dosage 2.0 (released 11.4.2013)

Features:
- comics: Added DamnLol, EverydayBlues, ExtraOrdinary,
  ForLackOfABetterComic, GoblinsComic, RealmOfAtland, Science,
  SnowFlakes, StuffNoOneToldMe, WebDesignerCOTW and ZenPencils.
- comics: Added the --vote option to vote for popular comics.

Changes:
- cmdline: Remove deprecated mainline script.

Fixes:
- install: Add install_requires to setup.py to fix pip install.
  Closes: GH bug #22
- comics: Fixed Curvy, DasLebenIstKeinPonyhof, ExtraLife, EyeOfRamalach,
  KatzenfutterGeleespritzer, Oglaf, Precocious, SnowFlame.
  Closes: GH bug #23
- comics: Removed CaribbeanBlue, GreystoneInn, SarahZero.


Dosage 1.15 (released 1.4.2013)

Features:
- comics: Added DrMcNinja, Schuelert.
- output: Added a new JSON output logger.

Changes:
- comics: Add better source for HagarTheHorrible
  Closes: GH bug #21
- output: Display error traceback information in verbose mode.

Fixes:
- comics: Fixed GoComics by downloading zoomed images,
  fixed WorlWorldSaga* and Eriadan, and removed DerFlix.


Dosage 1.14 (released 21.3.2013)

Features:
- comics: Added KeenSpot comic strips and enable ComicGenesis
  comic strips
- comics: Added CucumberQuest, DasLebenIstKeinPonyHof, DemolitionSquad,